--- a/source/_data/pub.bib
+++ b/source/_data/pub.bib
@@ -12,7 +12,7 @@
 }
 
 @article{zhu2010quasi,
-  title={Quasi-classical trajectory study of the reaction O (3P)+ HCl→ OH+ Cl and O (3P)+ DCl→ OD+ Cl: Vector and scalar properties},
+  title={Quasi-classical trajectory study of the reaction $\ce{O (^3P) + HCl -> OH + Cl$ and $\ce{O (^3P) + DCl -> OD + Cl}$: Vector and scalar properties},
   author={Zhu, Tong and Hu, Guodong and Zhang, Qinggang*},
   journal={Journal of Molecular Structure: THEOCHEM},
   volume={948},
@@ -25,8 +25,8 @@
 }
 
 @article{tong2010theoretical,
-  title={Theoretical study of stereodynamics for reaction O (3P)+ HCl},
-  author={Tong, Zhu and Guo-Dong, Hu and Jian-Zhong, Chen and Xin-Guo, Liu and Qing-Gang, Zhang*},
+  title={Theoretical study of stereodynamics for reaction $\ce{O (^3P) + HCl}$},
+  author={Tong Zhu and Guo-Dong Hu and Jian-Zhong Chen and Xin-Guo Liu and Qing-Gang Zhang*},
   journal={Chinese Physics B},
   volume={19},
   number={8},
@@ -37,7 +37,7 @@
 }
 
 @article{liu2010effect,
-  title={THE EFFECT OF VIBRATIONAL EXCITATION OF THE REACTION O (3 P)+ HCl→ OH+ Cl FOR THE 3 A ″ELECTRONIC STATES},
+  title={THE EFFECT OF VIBRATIONAL EXCITATION OF THE REACTION $\ce{O (^3 P) + HCl -> OH + Cl}$ FOR THE 3 A ″ELECTRONIC STATES},
   author={Liu, Huirong and Liu, Xinguo* and Zhu, Tong and Sun, Haizhu and Zhang, Qinggang},
   journal={Journal of Theoretical and Computational Chemistry},
   volume={9},
@@ -49,8 +49,8 @@
 }
 
 @article{tong2010quasi,
-  title={Quasi-classical Trajectory Study of Reaction O (3P)+ HCl (v= 2; j= 1, 6, 9)→ OH+ Cl},
-  author={Tong, Zhu and Guo-Dong, Hu and Qing-Gang, Zhang*},
+  title={Quasi-classical Trajectory Study of Reaction $\ce{O (^3P) + HCl (v= 2; j= 1, 6, 9) → OH + Cl}$},
+  author={Tong Zhu and Guo-Dong Hu and Qing-Gang Zhang*},
   journal={Chinese Physics Letters},
   volume={27},
   number={3},
@@ -342,7 +342,7 @@
 }
 
 @article{liu2017electrochemical,
-  title={An electrochemical biosensor with dual signal outputs: toward simultaneous quantification of pH and O2 in the brain upon ischemia and in a tumor during cancer starvation therapy},
+  title={An electrochemical biosensor with dual signal outputs: toward simultaneous quantification of pH and $\ce{O2}$ in the brain upon ischemia and in a tumor during cancer starvation therapy},
   author={Liu, Li and Zhao, Fan and Liu, Wei and Zhu, Tong and Zhang, John ZH and Chen, Chen and Dai, Zhihui and Peng, Huisheng and Huang, Jun-Long and Hu, Qin and Bu, Wenbo and Tian, Yang*},
   journal={Angewandte Chemie International Edition},
   volume={56},
@@ -660,7 +660,7 @@
 }
 
 @article{chin2019formation,
-  title={Formation mechanism and spectroscopy of C 6 H radicals in extreme environments: a theoretical study},
+  title={Formation mechanism and spectroscopy of $\ce{C6H}$ radicals in extreme environments: a theoretical study},
   author={Chin, Chih-Hao* and Zhu, Tong* and Zhang, John Zeng Hui},
   journal={Physical Chemistry Chemical Physics},
   volume={21},
@@ -705,7 +705,7 @@
 }
 
 @article{li2020ab,
-  title={An ab initio/RRKM study of the reaction mechanism and product branching ratios of CH3OH+ and CH3OH++ dissociation},
+  title={An ab initio/RRKM study of the reaction mechanism and product branching ratios of $\ce{CH3OH+}$ and $\ce{CH3OH++}$ dissociation},
   author={Li, Cuiyu and Chin, Chih-Hao* and Zhu, Tong and Zhang, John Zeng Hui*},
   journal={Journal of Molecular Structure},
   volume={1217},
@@ -717,7 +717,7 @@
 }
 
 @article{chin2020reaction,
-  title={Reaction mechanism and product branching ratios of OH+ C2H3F reaction: A theoretical study},
+  title={Reaction mechanism and product branching ratios of $\ce{OH + C2H3F}$ reaction: A theoretical study},
   author={Chin, Chih-Hao* and Zhu, Tong* and Zhang, John Zeng-Hui},
   journal={Chinese Journal of Chemical Physics},
   volume={33},
@@ -875,7 +875,7 @@
 @article{zhu2019nanoporous,
   title={Nanoporous Ni3P Evolutionarily Structured onto a Ni Foam for Highly Selective Hydrogenation of Dimethyl Oxalate to Methyl Glycolate},
   author={Zhu, Jian and Cao, Liqun and Li, Cuiyu and Zhao, Guofeng* and Zhu, Tong and Hu, Wei and Sun, Weidong and Lu, Yong*},
-  journal={ACS applied materials \& interfaces},
+  journal={ACS applied materials & interfaces},
   volume={11},
   number={41},
   pages={37635--37643},
