--- a/source/_data/pub.bib
+++ b/source/_data/pub.bib
@@ -49,7 +49,7 @@
 }
 
 @article{tong2010quasi,
-  title={Quasi-classical Trajectory Study of Reaction $\ce{O (^3P) + HCl (v= 2; j= 1, 6, 9) → OH + Cl}$},
+  title={Quasi-classical Trajectory Study of Reaction $\ce{O (^3P) + HCl (v= 2; j= 1, 6, 9) -> OH + Cl}$},
   author={Tong Zhu and Guo-Dong Hu and Qing-Gang Zhang*},
   journal={Chinese Physics Letters},
   volume={27},
