--- a/source/_data/pub.bib
+++ b/source/_data/pub.bib
@@ -12,7 +12,7 @@
 }
 
 @article{zhu2010quasi,
-  title={Quasi-classical trajectory study of the reaction $\ce{O (^3P) + HCl -> OH + Cl$ and $\ce{O (^3P) + DCl -> OD + Cl}$: Vector and scalar properties},
+  title={Quasi-classical trajectory study of the reaction $\ce{O (^3P) + HCl -> OH + Cl}$ and $\ce{O (^3P) + DCl -> OD + Cl}$: Vector and scalar properties},
   author={Zhu, Tong and Hu, Guodong and Zhang, Qinggang*},
   journal={Journal of Molecular Structure: THEOCHEM},
   volume={948},
