--- a/source/_data/pub.bib
+++ b/source/_data/pub.bib
@@ -37,7 +37,7 @@
 }
 
 @article{liu2010effect,
-  title={THE EFFECT OF VIBRATIONAL EXCITATION OF THE REACTION $\ce\{O (^3 P) + HCl -> OH + Cl\}$ FOR THE 3 A ″ELECTRONIC STATES},
+  title={THE EFFECT OF VIBRATIONAL EXCITATION OF THE REACTION $\ce\{O (^3 P) + HCl -> OH + Cl\}$ FOR THE $^3 A ″$ ELECTRONIC STATES},
   author={Liu, Huirong and Liu, Xinguo* and Zhu, Tong and Sun, Haizhu and Zhang, Qinggang},
   journal={Journal of Theoretical and Computational Chemistry},
   volume={9},
@@ -873,7 +873,7 @@
 }
 
 @article{zhu2019nanoporous,
-  title={Nanoporous Ni3P Evolutionarily Structured onto a Ni Foam for Highly Selective Hydrogenation of Dimethyl Oxalate to Methyl Glycolate},
+  title={Nanoporous $\ce\{Ni3P\}$ Evolutionarily Structured onto a Ni Foam for Highly Selective Hydrogenation of Dimethyl Oxalate to Methyl Glycolate},
   author={Zhu, Jian and Cao, Liqun and Li, Cuiyu and Zhao, Guofeng* and Zhu, Tong and Hu, Wei and Sun, Weidong and Lu, Yong*},
   journal={ACS applied materials & interfaces},
   volume={11},
