--- a/source/_data/pub.bib
+++ b/source/_data/pub.bib
@@ -37,7 +37,7 @@
 }
 
 @article{liu2010effect,
-  title={THE EFFECT OF VIBRATIONAL EXCITATION OF THE REACTION $\ce\{O (^3 P) + HCl -> OH + Cl\}$ FOR THE $^3 A ″$ ELECTRONIC STATES},
+  title={THE EFFECT OF VIBRATIONAL EXCITATION OF THE REACTION $\ce\{O (^3 P) + HCl -> OH + Cl\}$ FOR THE $^3 A^\{″\}$ ELECTRONIC STATES},
   author={Liu, Huirong and Liu, Xinguo* and Zhu, Tong and Sun, Haizhu and Zhang, Qinggang},
   journal={Journal of Theoretical and Computational Chemistry},
   volume={9},
