--- a/source/_data/pub.bib
+++ b/source/_data/pub.bib
@@ -70,7 +70,6 @@
   year={2012},
   publisher={The Royal Society of Chemistry},
   doi={10.1039/C2CP23746F},
-  image={https://pubs.rsc.org/en/Image/Get?imageInfo.ImageIdentifier.ManuscriptID=C2CP23746F}
 }
 
 @article{zhu2013automated,
@@ -148,7 +147,6 @@
   year={2014},
   publisher={Royal Society of Chemistry},
   doi={10.1039/C4CP02553A},
-  image={https://pubs.rsc.org/en/Image/Get?imageInfo.ImageIdentifier.ManuscriptID=C4CP02553A}
 }
 
 @article{swails2015afnmr,
@@ -264,7 +262,6 @@
   year={2016},
   publisher={Royal Society of Chemistry},
   doi={10.1039/C6RA22518G},
-  image={https://pubs.rsc.org/en/Image/Get?imageInfo.ImageIdentifier.ManuscriptID=C6RA22518G}
 }
 
 @incollection{zhu2015quantum,
@@ -338,7 +335,6 @@
   year={2017},
   publisher={Royal Society of Chemistry},
   doi={10.1039/C7CP02101A},
-  image={https://pubs.rsc.org/en/Image/Get?imageInfo.ImageIdentifier.ManuscriptID=C7CP02101A}
 }
 
 @article{liu2017electrochemical,
@@ -435,7 +431,6 @@
   year={2017},
   publisher={Royal Society of Chemistry},
   doi={10.1039/C7RA09485J},
-  image={https://pubs.rsc.org/en/Image/Get?imageInfo.ImageIdentifier.ManuscriptID=C7RA09485J}
 }
 
 @article{wang2018quantum,
@@ -510,7 +505,6 @@
   publisher={Royal Society of Chemistry},
   doi =      {10.1039/C9CP05091D},
   eprint =   {https://doi.org/10.1039/C9CP05091D},
-  image = {https://pubs.rsc.org/en/Image/Get?imageInfo.ImageIdentifier.ManuscriptID=C9CP05091D},
   googlescholar = 11110115133859772670,
   github = {tongzhugroup/reacnetgenerator},
   researchgate=337541969,
@@ -656,7 +650,6 @@
   year={2019},
   publisher={Royal Society of Chemistry},
   doi={10.1039/C9CP03598B},
-  image={https://pubs.rsc.org/en/Image/Get?imageInfo.ImageIdentifier.ManuscriptID=C9CP03598B}
 }
 
 @article{chin2019formation,
@@ -669,7 +662,6 @@
   year={2019},
   publisher={Royal Society of Chemistry},
   doi={10.1039/C9CP03662H},
-  image={https://pubs.rsc.org/en/Image/Get?imageInfo.ImageIdentifier.ManuscriptID=C9CP03662H}
 }
 
 @article{zhu2015correction,
@@ -819,7 +811,6 @@
   year={2014},
   publisher={Royal Society of Chemistry},
   doi={10.1039/C3CP55069A},
-  image={https://pubs.rsc.org/en/Image/Get?imageInfo.ImageIdentifier.ManuscriptID=C3CP55069A}
 }
 
 @article{wang2016predicted,
@@ -883,4 +874,16 @@
   publisher={ACS Publications},
   doi={10.1021/acsami.9b11703},
   image={https://pubs.acs.org/na101/home/literatum/publisher/achs/journals/content/aamick/2019/aamick.2019.11.issue-41/acsami.9b11703/20191010/images/medium/am9b11703_0007.gif}
+}
+
+@article{liu2021engineering,
+  title={Engineering the biomimetic cofactors of NMNH for cytochrome P450 BM3 based on binding conformation refinement},
+  author={Liu, Yao and Cong, Yalong and Zhang, Chuanxi and Fang, Bohuan and Pan, Yue and Li, Qiangzi and You, Chun and Gao, Bei and Zhang, John ZH and Zhu, Tong and others},
+  journal={RSC Advances},
+  volume={11},
+  number={20},
+  pages={12036--12042},
+  year={2021},
+  publisher={Royal Society of Chemistry},
+  doi={10.1039/D1RA00352F}
 }
