--- a/source/_data/pub.bib
+++ b/source/_data/pub.bib
@@ -878,7 +878,7 @@
 
 @article{liu2021engineering,
   title={Engineering the biomimetic cofactors of NMNH for cytochrome P450 BM3 based on binding conformation refinement},
-  author={Liu, Yao and Cong, Yalong and Zhang, Chuanxi and Fang, Bohuan and Pan, Yue and Li, Qiangzi and You, Chun and Gao, Bei and Zhang, John ZH and Zhu, Tong and others},
+  author={Liu, Yao and Cong, Yalong and Zhang, Chuanxi and Fang, Bohuan and Pan, Yue and Li, Qiangzi and You, Chun and Gao, Bei and Zhang, John ZH and Zhu, Tong* and Zhang, Lujia*},
   journal={RSC Advances},
   volume={11},
   number={20},
