fix: add new papers

--- a/source/_data/pub.bib
+++ b/source/_data/pub.bib
@@ -887,3 +887,34 @@
   publisher={Royal Society of Chemistry},
   doi={10.1039/D1RA00352F}
 }
+
+@article{chen2021binding,
+  title={Binding Mechanisms of fluorophores to Mango-II revealed by multiple-replica molecular dynamics simulations},
+  author={Chen, Junxiao and Li, Na and Wang, Xingyu and Chen, Jianzhong* and Zhang, John ZH* and Zhu, Tong*},
+  journal={Physical Chemistry Chemical Physics},
+  year={2021},
+  publisher={Royal Society of Chemistry},
+  doi={10.1039/D0CP06438F},
+  googlescholar=853329223560094783
+}
+
+@article{li2021extensive,
+  title={Extensive Evaluation of Force Fields for G-Quadruplexes},
+  journal={ChemRxiv Preprint},
+  author={Li, Na and Zhu, Tong*},
+  doi={10.26434/chemrxiv.14369897},
+  googlescholar=2703150511161602519
+}
+
+@article{xu2021automated,
+  title={Automated Construction of Neural Network Potential Energy Surface: The Enhanced Self-Organizing Incremental Neural Network Deep Potential Method},
+  author={Xu, Mingyuan and Zhu, Tong* and Zhang, John ZH*},
+  year={2021},
+  journal={ChemRxiv Preprint},
+  publisher={ChemRxiv}
+  doi={10.26434/chemrxiv.14370527},
+  googlescholar=1192671372176341800
+}
+
+
+
