--- a/source/_data/pub.bib
+++ b/source/_data/pub.bib
@@ -911,7 +911,7 @@
   author={Xu, Mingyuan and Zhu, Tong* and Zhang, John ZH*},
   year={2021},
   journal={ChemRxiv Preprint},
-  publisher={ChemRxiv}
+  publisher={ChemRxiv},
   doi={10.26434/chemrxiv.14370527},
   googlescholar=1192671372176341800
 }
