fix: add publications

--- a/source/_data/pub.bib
+++ b/source/_data/pub.bib
@@ -676,12 +676,16 @@
 }
 
 @article{cao2019combustion,
-  title={Combustion Driven by Fragment-based Ab Initio Molecular Dynamics Simulation},
+  title={Fragment-based Ab Initio Molecular Dynamics Simulation for Combustion},
   author={Cao, Liqun and Zeng, Jinzhe and Xu, Mingyuan and Chin, Chih-Hao and Zhu, Tong* and Zhang, John ZH*},
-  year={2019},
-  publisher={ChemRxiv},
-  journal={ChemRxiv},
-  doi={10.26434/chemrxiv.11462160}
+  year={2021},
+  journal={Molecules},
+  volume=26,
+  number=11,
+  pages=3120,
+  doi={10.3390/molecules26113120},
+  image={https://www.researchgate.net/profile/Jinzhe_Zeng/publication/338283292/figure/fig1/AS:934167122542592@1599734206152/Fragmentation-scheme-of-the-MFCC-combustion-approach-The-blue-cycles-show-that-a-single.png},
+  pdf={https://www.mdpi.com/1420-3049/26/11/3120/pdf}
 }
 
 @article{gao2020effect,
@@ -907,13 +911,23 @@
 }
 
 @article{xu2021automated,
-  title={Automated Construction of Neural Network Potential Energy Surface: The Enhanced Self-Organizing Incremental Neural Network Deep Potential Method},
+  title={Automatically Construct Neural Network Potentials for Molecular Dynamics Simulation of Zinc Proteins},
   author={Xu, Mingyuan and Zhu, Tong* and Zhang, John ZH*},
   year={2021},
-  journal={ChemRxiv Preprint},
-  publisher={ChemRxiv},
-  doi={10.26434/chemrxiv.14370527},
-  googlescholar=1192671372176341800
+  volume=9,
+  pages=385,
+  journal={Frontiers in Chemistry},
+  doi={10.3389/fchem.2021.692200},
+  googlescholar=1887991449667553668
+}
+
+@article{chin2021cyclopentadienyl,
+  title={Cyclopentadienyl radical formation from the reaction of excited nitrogen atoms with benzene: A theoretical study},
+  author={Chin, Chih-Hao* and Zhu, Tong and Zhang, John ZH*},
+  journal={Physical Chemistry Chemical Physics},
+  year={2021},
+  doi={10.1039/D1CP00133G},
+  publisher={Royal Society of Chemistry}
 }
 
 
